feat: add unit and integration tests